[project]
name = "mpscraper"
dynamic = ["version"]
description = "Marktplaats.nl (Dutch Classifieds) Listing Scraper"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Ross Chadwick", email = "git@ross.ch" }]
keywords = [
    "web-scraping",
    "selenium",
    "marktplaats",
    "machine-learning",
    "dataset-generation",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "selenium>=4.38.0",
    "tqdm>=4.67.1",
    "PyVirtualDisplay>=3.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "basedpyright>=1.31.7",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.0",
    "pre-commit>=4.5.0",
    "pandas-stubs>=2.3.3.251219",
]

[project.scripts]
mpscraper = "mpscraper.__main__:main"

[project.urls]
Homepage = "https://github.com/chadsr/marktplaats-scraper"
Repository = "https://github.com/chadsr/marktplaats-scraper"
Issues = "https://github.com/chadsr/marktplaats-scraper/issues"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mpscraper"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.hatch.build.hooks.versioningit-onbuild]
source-file = "mpscraper/_version.py"
build-file = "mpscraper/_version.py"
replacement = '"{next_version}"'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["--cov=mpscraper", "--cov-report=term-missing"]
markers = []
log_cli_level = "INFO"
log_format = "%(asctime)s | %(levelname)s | %(name)s | %(filename)s:%(lineno)d | %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

# Coverage.py configuration to ensure .coverage* data files are written (especially with xdist)
[tool.coverage.run]
branch = true
parallel = true
# Force the standard filename so the CI finds it reliably after combining
data_file = ".coverage"
# Limit measurement to our source tree (mirrors --cov=src)
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
exclude = ["typings", "output", "logs"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "RUF",   # ruff-specific rules
    "ASYNC", # flake8-async
    "T20",   # flake8-print
    "PL",    # pylint
    "PERF",  # perflint
    "FURB",  # refurb
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "T201",    # print found (allow print statements)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLW0603", # allow global updates in test helpers/hooks (pytest globals)
    "PLR2004", # magic values in tests
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments in tests
]
"__init__.py" = [
    "F401", # unused imports in __init__.py
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.basedpyright]
include = ["mpscraper", "tests"]
exclude = ["**/__pycache__"]
stubPath = "typings"
reportMissingImports = "error"
reportMissingTypeStubs = true
reportAttributeAccessIssue = true
failOnWarnings = false
ignore = []
defineConstant = {}

[tool.bandit]
exclude = ["test_*.py"]
